// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Newsletter /> renders a disabled form while submitting 1`] = `
<div>
  <form
    action="https://formspree.io/hello@ismaywolff.nl"
    method="POST"
    onSubmit={[Function]}
  >
    <styled.input
      autoComplete="email"
      disabled={true}
      fill={true}
      hidden={false}
      name="email"
      onChange={[Function]}
      placeholder="Your email"
      required={true}
      type="email"
      value="email"
    />
    <styled.input
      autoComplete="off"
      disabled={true}
      fill={false}
      hidden={true}
      name="_gotcha"
      onChange={[Function]}
      tabIndex="-1"
      type="text"
      value=""
    />
    <styled.div
      center={false}
      color="unset"
      margin="var(--size-smaller) 0 0 0"
      size="unset"
    >
      <styled.button
        disabled={true}
        fill={true}
        type="submit"
      >
        Subscribing
      </styled.button>
    </styled.div>
  </form>
</div>
`;

exports[`<Newsletter /> renders a success message after a successful submit 1`] = `
<div>
  <styled.div
    center={false}
    color="unset"
    margin="0 0 var(--size-regular) 0"
    size="unset"
  >
    <styled.div
      type="success"
    >
      email
       has successfully been added to the mailing list. Thank you!
    </styled.div>
  </styled.div>
  <styled.button
    fill={true}
    onClick={[Function]}
    type="reset"
  >
    Add another email address
  </styled.button>
</div>
`;

exports[`<Newsletter /> renders an error message after a unsuccessful submit 1`] = `
<div>
  <styled.div
    center={false}
    color="unset"
    margin="0 0 var(--size-regular) 0"
    size="unset"
  >
    <styled.div
      type="error"
    >
      Something went wrong. Check if you have a working internet connection and make sure that you entered a valid email address.
    </styled.div>
  </styled.div>
  <form
    action="https://formspree.io/hello@ismaywolff.nl"
    method="POST"
    onSubmit={[Function]}
  >
    <styled.input
      autoComplete="email"
      fill={true}
      hidden={false}
      name="email"
      onChange={[Function]}
      placeholder="Your email"
      required={true}
      type="email"
      value="email"
    />
    <styled.input
      autoComplete="off"
      fill={false}
      hidden={true}
      name="_gotcha"
      onChange={[Function]}
      tabIndex="-1"
      type="text"
      value=""
    />
    <styled.div
      center={false}
      color="unset"
      margin="var(--size-smaller) 0 0 0"
      size="unset"
    >
      <styled.button
        fill={true}
        type="submit"
      >
        Try again
      </styled.button>
    </styled.div>
  </form>
</div>
`;

exports[`<Newsletter /> renders correctly 1`] = `
<form
  action="https://formspree.io/hello@ismaywolff.nl"
  method="POST"
  onSubmit={[Function]}
>
  <styled.input
    autoComplete="email"
    fill={true}
    hidden={false}
    name="email"
    onChange={[Function]}
    placeholder="Your email"
    required={true}
    type="email"
    value=""
  />
  <styled.input
    autoComplete="off"
    fill={false}
    hidden={true}
    name="_gotcha"
    onChange={[Function]}
    tabIndex="-1"
    type="text"
    value=""
  />
  <styled.div
    center={false}
    color="unset"
    margin="var(--size-smaller) 0 0 0"
    size="unset"
  >
    <styled.button
      fill={true}
      type="submit"
    >
      Subscribe
    </styled.button>
  </styled.div>
</form>
`;
